Fix spacing

--- a/source/sass-bem/components/_c-footer.scss
+++ b/source/sass-bem/components/_c-footer.scss
@@ -13,3 +13,7 @@
 .c-footer.c-footer--xl {
     padding: $baseline*24 0;
 }
+
+.c-footer .c-footer__widget + .c-footer__widget {
+    margin-top: $baseline * 4;
+}
