--- a/source/sass/utility/_visibility.scss
+++ b/source/sass/utility/_visibility.scss
@@ -26,6 +26,7 @@
 .hidden-sm {@extend .u-hidden\@sm;}
 .hidden-md {@extend .u-hidden\@md;}
 .hidden-lg {@extend .u-hidden\@lg;}
+.hidden-lg {@extend .u-hidden\@xl;}
 
 .block-level {
 	display: block;
